--- a/SignalRDemo/SignalRDemo/Views/Shared/_Footer.cshtml
+++ b/SignalRDemo/SignalRDemo/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿@model dynamic
 
 <footer>
-<h3>Brought to you by <a href="http://3thoughtcreative.com">3Thought Creative</a> and <a href="http://wbsimms.com">WBSimms.com</a></h3>
+<h3>Brought to you by <a href="http://wbsimms.com">WBSimms.com</a></h3>
 </footer>
